--- a/data structures/README
+++ b/data structures/README
@@ -1,2 +1,2 @@
-Course assignments that implemented vector and and queue in c++.
+Course assignments that implemented a vector and a queue in c++.
 Wrote during CSE250 in Summer 2020.
